[build-system]
requires = ["setuptools", "cx_Freeze"]
build-backend = "setuptools.build_meta"

[project]
name = "wabbajack-autoclicker"
version = "0.1.0"
requires-python = ">=3.12"
description = "A complementary script for Wabbajack"
readme = "README.md"
license = { file = "LICENSE.md" }
dependencies = [
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.0",
    "psutil",
    "pyautogui",
    "PySide6",
]

[tool.cxfreeze]
executables = [
    { script = "wabbajack autoclicker.py", target_name = "wabbajack_autoclicker.exe", base = "gui" }
]

[tool.cxfreeze.build_exe]
excludes = ["tkinter"]
include_files = ["slow download button.png"]

[dependency-groups]
dev = [
    "cx-freeze>=8.5.3",
]
