[build-system]
requires = ["setuptools", "cx_Freeze"]
build-backend = "setuptools.build_meta"

[project]
name = "wabbajack-autoclicker"
version = "0.1.0"
requires-python = ">=3.12"
description = "A complementary script for Wabbajack"
readme = "README.md"
license = { file = "LICENSE.md" }
dependencies = [
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.0",
    "psutil",
    "pyautogui",
    "PySide6",
]

[tool.cxfreeze]
executables = [
    { script = "wabbajack autoclicker.py", target_name = "wabbajack_autoclicker", base = "gui", icon = "icon.ico" }
]

[tool.cxfreeze.build_exe]
excludes = ["tkinter"]
include_files = ["slow download button.png", "icon.png"]

[tool.cxfreeze.bdist_msi]
# Unique ID for this application to allow upgrades. Do not change this for future versions.
upgrade_code = "{97F8329B-0567-4398-9532-8765432109AB}"
add_to_path = true
initial_target_dir = "[ProgramFilesFolder]\\WabbajackAutoclicker"
install_icon = "icon.ico"

[dependency-groups]
dev = [
    "cx-freeze>=8.5.3",
]
